--- a/css/main.scss
+++ b/css/main.scss
@@ -42,6 +42,10 @@ $on-laptop:        800px;
     }
 }
 
+html{
+    background:red;
+}
+
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
