--- a/css/main.css
+++ b/css/main.css
@@ -753,7 +753,7 @@ footer {
     position: fixed;
     z-index: 9; }
 
-  .main-div, .nav-left, .nav-right {
+  footer .main-div, .nav-left, .nav-right {
     visibility: hidden; }
 
   .primary-nav.is-visible .primary-nav-links {
